Дописал что смог

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -576,6 +576,112 @@
     "\n",
     "Несмотря на то, что при изначальном анализе данных были допущены неточности, модель показала высокий уровень точности и надёжности. Перспективы развития довольно обширны: следует более тщательно очистить параметры, в частности следует уделить особое внимание поведению параметра backers, т.к. несмотря на его высокую корреляцию с успехом он будет недоступен для планирующихся или только начавшихся краудфандинговых кампаний. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58c015b9",
+   "metadata": {},
+   "source": [
+    "<h2>Дерево решений</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1252804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "def train_decision_tree(data, feature_columns):\n",
+    "    # Подготовка данных\n",
+    "    X = data[feature_columns]\n",
+    "    y = data['success']\n",
+    "    \n",
+    "    # Разделение на тренировочную и тестовую выборки\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X, y, test_size=0.2, random_state=42, stratify=y\n",
+    "    )\n",
+    "\n",
+    "    # Подбор гиперпараметров для дерева решений\n",
+    "    dt_params = {\n",
+    "        'max_depth': [5, 10, 15, 20, None],\n",
+    "        'min_samples_split': [2, 5, 10],\n",
+    "        'min_samples_leaf': [1, 2, 4],\n",
+    "        'max_features': ['sqrt', 'log2', None]\n",
+    "    }\n",
+    "    \n",
+    "    dt_model = DecisionTreeClassifier(random_state=42)\n",
+    "    dt_grid = GridSearchCV(dt_model, dt_params, cv=5, scoring='roc_auc', n_jobs=-1)\n",
+    "    dt_grid.fit(X_train, y_train)  # Деревья не требуют масштабирования\n",
+    "    \n",
+    "    dt_best = dt_grid.best_estimator_\n",
+    "    dt_pred = dt_best.predict(X_test)\n",
+    "    dt_pred_proba = dt_best.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "    return dt_model, scaler, X_train_scaled, X_test_scaled, y_train, y_test, X_train, X_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6172159",
+   "metadata": {},
+   "source": [
+    "<h2>Нейронная сеть (MLP)</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4805e28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "def train_neural_network(data, feature_columns):\n",
+    "    # Подготовка данных\n",
+    "    X = data[feature_columns]\n",
+    "    y = data['success']\n",
+    "    \n",
+    "    # Разделение на тренировочную и тестовую выборки\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X, y, test_size=0.2, random_state=42, stratify=y\n",
+    "    )\n",
+    "\n",
+    "    # Масштабирование признаков\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "    # Подбор гиперпараметров для нейронной сети\n",
+    "    nn_params = {\n",
+    "        'hidden_layer_sizes': [(50,), (100,), (50, 50), (100, 50)],\n",
+    "        'activation': ['relu', 'tanh'],\n",
+    "        'alpha': [0.0001, 0.001, 0.01],\n",
+    "        'learning_rate': ['constant', 'adaptive']\n",
+    "    }\n",
+    "    \n",
+    "    nn_model = MLPClassifier(random_state=42, max_iter=500)\n",
+    "    nn_grid = GridSearchCV(nn_model, nn_params, cv=5, scoring='roc_auc', n_jobs=-1)\n",
+    "    nn_grid.fit(X_train_scaled, y_train)\n",
+    "    \n",
+    "    nn_best = nn_grid.best_estimator_\n",
+    "    nn_pred = nn_best.predict(X_test_scaled)\n",
+    "    nn_pred_proba = nn_best.predict_proba(X_test_scaled)[:, 1]\n",
+    "\n",
+    "    return nn_model, scaler, X_train_scaled, X_test_scaled, y_train, y_test, X_train, X_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70a7f272",
+   "metadata": {},
+   "source": [
+    "Расписать про эти модели не успел, к сожалению\n"
+   ]
   }
  ],
  "metadata": {
